--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.4.7",
+    "glslCanvas": "^0.2.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "mp3tag.js": "^3.11.2",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
@@ -70,24 +71,36 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@eslint/js": "^8.56.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
     "@types/three": "^0.173.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "chai": "^4.3.10",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.3",
+    "mocha": "^10.2.0",
+    "png-js": "^1.0.0",
     "postcss": "^8.4.47",
+    "puppeteer": "^22.3.0",
+    "rollup": "^4.9.6",
+    "rollup-plugin-version-injector": "^1.3.3",
+    "sucrase": "^3.35.0",
     "tailwindcss": "^3.4.11",
     "terser": "^5.39.0",
-    "typescript": "^5.5.3",
+    "typescript": "^5.3.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.1.4"
   }
 }
